update netlify config

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://www.archaeoramblings.com"
+base_url = "https://poetic-blancmange-a64617"
 title = "Archaeoramblings"
 description = "Just random stuff from a random archaeologist"
 default_language = "en"
