Implement catppuccin syntax highlight extra theme
This uses zola extra syntax highlight theme.
However, instead of making additional network requests in the homepage, it loads the two css only in the blog pages (and other pages using the page.html template)

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,12 @@ taxonomies = [
 paths_keep_dates = true
 [markdown]
 highlight_code = true
-highlight_theme = "zenburn"
+extra_syntaxes_and_themes = ["highlight_themes/catppuccin"]
+highlight_theme = "css"
+highlight_themes_css = [
+  { theme = "catppuccin_latte", filename = "css/syntax-theme-dark.css" },
+  { theme = "catppuccin_frappe", filename = "css/syntax-theme-light.css" },
+]
 [extra]
 email = "298mtxjd@anonaddy.me"
 avatar = "img/avatar.webp"
