--- a/config.toml
+++ b/config.toml
@@ -45,11 +45,8 @@ footer_items = [
     { url = "/rss", name = "RSS" }
 ]
 webrings = [
-    { link = "https://fediring.net/", name = "Fediring", prev = "previous?host=", next = "previous?host=", random = "true"},
-    { link = "https://webring.archaeo.social/", name = "Archaeoring", prev = "previous?host=", next = "previous?host=", random = "true"},
-]
-buttons = [
-    { path = "/img/buttons/", title = "Kiwix"}
+    { url = "https://fediring.net/", name = "Fediring", prev = "previous?host=", next = "next?host=", random = "true",  slug = "archaeoramblings.com"},
+    { url = "https://webring.archaeo.social/", name = "Archaeoring", prev = "previous?host=", next = "next?host=", random = "true", slug = "archaeoramblings.com"},
 ]
 [extra.favicon]
 favicon_ico = "/img/favicons/favicon.ico"
