--- a/config.toml
+++ b/config.toml
@@ -5,8 +5,8 @@ default_language = "en"
 author = "Andrea Titolo"
 output_dir = "public"
 compile_sass = false
-generate_feed = true
-feed_filename = "atom.xml"
+generate_feeds = true
+feed_filenames = ["atom.xml", "rss.xml"]
 build_search_index = false
 minify_html = false
 taxonomies = [
